update book's filering api